--- a/src/components/global/plCollapse/style.less
+++ b/src/components/global/plCollapse/style.less
@@ -1,18 +1,18 @@
 @import '../../../styles/variables.less';
 .pl-collapse {
   background-color: #fff;
-  padding: 0 10px 10px;
+  padding: 10px 10px;
   height: auto;
   text-align: left;
   &__content {
     font-size: 12px;
-    line-height: 18px;
-    .ellipsis(3)
+    line-height: 20px;
+    .ellipsis(3);
   }
   &__icon {
     color: @golden-color;
     font-size: 12px;
-    margin-top: 5px;
+    margin-top: 8px;
     span {
       margin-right: 3px;
     }
