新增组件功能

--- a/src/components/global/plCellGroup/style.less
+++ b/src/components/global/plCellGroup/style.less
@@ -1,4 +1,9 @@
 .pl-cell-group {
-  background-color: #fff;
-  padding: 0 10px;
+  margin-top: 10px; 
+  &--title {
+    padding-left: 10px;
+    font-size: 14px;
+    color: #969799;
+    margin-bottom: 5px;
+  }
 }
