--- a/src/components/global/plCellItem/style.less
+++ b/src/components/global/plCellItem/style.less
@@ -2,7 +2,7 @@
 .pl-cell-item {
   background-color: #fff;
   border-bottom: 1px solid #eee;
-  padding: 16px 0;
+  padding: 16px 10px;
   font-size: 14px;
   &__header {
     display: flex;
@@ -20,9 +20,6 @@
     flex: 1;
     text-align: left;
     color: @black-color
-  }
-  .only-title {
-    text-align: center
   }
   &__value {
     flex: 1;
