--- a/src/components/businessComponents/plCard/style.less
+++ b/src/components/businessComponents/plCard/style.less
@@ -4,7 +4,7 @@
   background-color: #fff;
   padding: 10px;
   text-align: left;
-
+  margin-bottom: 10px;
   img {
     height: 64px;
     width: 64px;
