--- a/src/components/Toast/style.less
+++ b/src/components/Toast/style.less
@@ -35,7 +35,7 @@
   &-bottom {
     top: 80%;
   }
-  &-center {
+  &-middle {
     top: 50%;
   }
   // mask
@@ -51,7 +51,6 @@
   }
   &-loading {
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.3);
     font-size: 13px;
     color: #666;
     &--content {
@@ -59,9 +58,11 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      padding: 15px 20px;
-      background-color: rgba(255, 255, 255, 0.9);
+      padding: 20px 35px;
       border-radius: 5px;
+    }
+    &--msg {
+      margin-top: 10px;
     }
   }
   // model样式
@@ -71,8 +72,12 @@
     color: #FFF;
   }
   &--white {
-    background:rgba(255,255,255,1);
-    box-shadow:0px 1px 8px 0px rgba(194,194,194,0.5);
+    background:rgba(255,255,255, 0.95);
+    box-shadow: 0px 1px 8px 0px rgba(194, 194, 194, 0.5);
     color: #666;
+  }
+  &--transparent {
+    background-color: transparent;
+    color: #313131;
   }
 }
